--- a/public/home/css/style-color.css
+++ b/public/home/css/style-color.css
@@ -407,8 +407,7 @@ section.video blockquote i.fa-quote-left {
 		background-color: transparent !important;
 	}
 
-	#header.flat-menu nav ul.nav-main li > a:hover,
-	#header.flat-menu nav ul.nav-main li.dropdown:hover a {
+	#header.flat-menu nav ul.nav-main li > a:hover {
 		color: #FFF;
 		background-color: #0698CB !important;
 	}
