--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -17,7 +17,7 @@ html {
 
 body {
 	background-color: white;
-	color: #777777;
+	color: #666;
 	font-family: "Open Sans", Arial, sans-serif;
 	font-size: 14px;
 	line-height: 22px;
@@ -52,7 +52,9 @@ body {
 	transition: all 0.3s ease-in-out;
 	color:#08C;
 }
-
+#mainMenu li a{
+	color:#fff;
+}
 .process-image i {
 	color:#777;
     padding: 15px;
@@ -1132,11 +1134,12 @@ body.sticky-menu-active #header.transparent.semi-transparent.font-color-light na
 }
 
 #header nav.mega-menu ul.nav-main .mega-menu-signin.logged .list-account-options a:hover {
-	text-decoration: none;
+	text-decoration: underline;
+	text-shadow: 0px 0px;
 }
 
 body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a, body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu:hover li:hover li:hover a {
-	/*background-color: transparent !important;*/
+	background-color: #fff !important;
 	color: #333;
 	padding: 0;
 	margin: 0;
@@ -1182,6 +1185,7 @@ body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a, body #header
 	}
 
 	#header nav.mega-menu ul.nav-main .mega-menu-signin.logged .list-account-options a:hover {
+		text-decoration: underline !important;
 		color: #FFF !important;
 	}
 }
@@ -1888,7 +1892,7 @@ aside ul.nav-list > li > a {
 
 /* Home Intro */
 .home-intro {
-	background-color: #171717;
+	background-color: #293541;
 	margin-bottom: 0px;
 	overflow: hidden;
 	padding: 20px 0 10px 0;
@@ -2132,8 +2136,8 @@ aside ul.nav-list > li > a {
 }
 /* #Footer */
 #footer {
-	background: #0e0e0e;
-	border-top: 4px solid #0e0e0e;
+	background: #293541;
+	border-top: 4px solid #242E3A;
 	font-size: 0.9em;
 	margin-top: 50px;
 	padding: 70px 0 0;
@@ -2313,8 +2317,7 @@ aside ul.nav-list > li > a {
 }
 
 #footer .footer-copyright {
-	background: #060606;
-	border-top: 4px solid #060606;
+	background: #242E3A;
 	margin-top: 40px;
 	padding: 30px 0 10px;
 }
