--- a/public/home/css/style-color.css
+++ b/public/home/css/style-color.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,200,300,500,700);
+
 h3,
 h4,
 h5 {
@@ -398,8 +400,11 @@ section.video blockquote i.fa-quote-left {
 	}
 
 	#header.flat-menu nav ul.nav-main li > a{
-		font-size:12px;
-		letter-spacing: 1px; 
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: 500;
+		font-size: 12px;
+		font-family: "Raleway",Arial,sans-serif;
 		color: #293541;
 	}
 
