--- a/public/home/css/preloader.css
+++ b/public/home/css/preloader.css
@@ -1,7 +1,9 @@
 /* #PAGE LOAD */
 
 body.royal_loader {
-    background: none;
+/* Fix ako se ne pokaze prvi*/
+    background: #33B5E5; 
+	z-index: -1;
     visibility: hidden;
 }
 #royal_preloader {
