--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 #h0 a:hover{
 	text-decoration: none;
-	color:#08C;
+	color:#0698CB;
 }
 .insertion{
 	height:200px;
@@ -50,7 +50,7 @@ body {
 	-ms-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	color:#08C;
+	color:#0698CB;
 }
 #mainMenu li a{
 	color:#fff;
@@ -1141,10 +1141,17 @@ body.sticky-menu-active #header.transparent.semi-transparent.font-color-light na
 	text-decoration: underline;
 	text-shadow: 0px 0px;
 	color: #0698CB !important;
+	background:transparent !important;
 }
 
-body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a, body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu:hover li:hover li:hover a {
-	background-color: #fff !important;
+body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a{
+	background-color: transparent !important;
+	color: #333;
+	padding: 0;
+	margin: 0;
+}
+
+body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu:hover li:hover li:hover a {
 	color: #333;
 	padding: 0;
 	margin: 0;
@@ -1186,10 +1193,17 @@ body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a, body #header
 	}
 
 	#header nav.mega-menu ul.nav-main .mega-menu-signin.logged .list-account-options a {
+		background-color: #171717 !important;
 		color: #FFF !important;
 	}
-
+	#header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a{
+		background-color: #171717 !important;
+		color: #333;
+		padding: 0;
+		margin: 0;
+	}
 	#header nav.mega-menu ul.nav-main .mega-menu-signin.logged .list-account-options a:hover {
+		background-color: #171717 !important;
 		text-decoration: underline !important;
 		color: #FFF !important;
 	}
@@ -1212,6 +1226,11 @@ body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu li a, body #header
 	}
 }
 /* Responsive */
+@media screen and (max-height: 622px) {
+	.menu-item{
+		display:none !important;
+	}
+}
 @media (max-width: 991px) {
 	/* Header */
 	#header {
