--- a/public/home/css/preloader.css
+++ b/public/home/css/preloader.css
@@ -6,6 +6,9 @@ body.royal_loader {
 	z-index: -1;
     visibility: hidden;
 }
+#header{
+	z-index:10;
+}
 #royal_preloader {
     font-family: "Open Sans",Arial,sans-serif;
     font-size: 12px;
