--- a/public/control/css/login-style.css
+++ b/public/control/css/login-style.css
@@ -1,10 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800,300&subset=latin,latin-ext);
 
 body {
-  background: #e9e9e9;
-  color: #666666;
+  background: #33B5E5;
+  color: #fff;
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -15,21 +15,25 @@ body {
   text-align: center;
   letter-spacing: 2px;
 }
-.pen-title h1 {
+.pen-title h1 a{
   margin: 0 0 20px;
-  font-size: 48px;
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: normal;
+  color:#fff;
+  text-decoration:none;
 }
 .pen-title span {
   font-size: 12px;
 }
 .pen-title span .fa {
-  color: #33b5e5;
+  color: #fff;
 }
 .pen-title span a {
-  color: #33b5e5;
-  font-weight: 600;
-  text-decoration: none;
+  color: #fff;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
 }
 
 /* Form Module */
@@ -38,7 +42,7 @@ body {
   background: #ffffff;
   max-width: 320px;
   width: 100%;
-  border-top: 5px solid #33b5e5;
+  border-top: 5px solid #2991B7;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
 }
@@ -47,7 +51,7 @@ body {
   position: absolute;
   top: -0;
   right: -0;
-  background: #33b5e5;
+  background: #2991B7;
   width: 30px;
   height: 30px;
   margin: -5px 0 0;
@@ -61,7 +65,8 @@ body {
   top: 5px;
   right: -65px;
   display: block;
-  background: rgba(0, 0, 0, 0.6);
+  background: #fff;
+  color: #2991B7;
   width: auto;
   padding: 5px;
   font-size: 10px;
@@ -76,7 +81,7 @@ body {
   display: block;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-right: 5px solid rgba(0, 0, 0, 0.6);
+  border-right: 5px solid #fff;
 }
 .form-module .form {
   display: none;
@@ -106,7 +111,7 @@ body {
 }
 .form-module input:focus {
   border: 1px solid #33b5e5;
-  color: #333333;
+  color: #666;
 }
 .form-module button {
   cursor: pointer;
@@ -119,16 +124,18 @@ body {
   transition: 0.3s ease;
 }
 .form-module button:hover {
-  background: #178ab4;
+  background: #2991B7;
 }
 .form-module .cta {
-  background: #f2f2f2;
+  background: #2991B7;
   width: 100%;
-  padding: 15px 40px;
   box-sizing: border-box;
-  color: #666666;
-  font-size: 12px;
+  color: #fff;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 16px;
   text-align: center;
+  transition: all 0.5s ease 0s;
 }
 .form-module .cta a {
   color: #333333;
