--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -23,6 +23,22 @@ body {
 	line-height: 22px;
 	margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+	background-color: #0698CB;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 .signup-menu{
 	cursor:pointer; 
 	font-family:'Slider-font',cursive; 
