--- a/public/home/css/style-color.css
+++ b/public/home/css/style-color.css
@@ -334,7 +334,6 @@ section.video blockquote i.fa-quote-left {
 #header nav ul.nav-main ul.dropdown-menu,
 #header nav ul.nav-main li.dropdown.open .dropdown-toggle,
 #header nav ul.nav-main li.active a,
-#header nav ul.nav-main li > a:hover,
 #header nav ul.nav-main li.dropdown:hover a {
 	color: #FFF;
 	background-color: #0698CB !important;
@@ -396,13 +395,24 @@ section.video blockquote i.fa-quote-left {
 		color: #293541;
 	}
 
-	#header.flat-menu nav ul.nav-main li.active > a ,
-	#header.flat-menu nav ul.nav-main li > a:hover {
-		color: #FFF;
+	#header.flat-menu nav ul.nav-main li.active > a {	
+		-webkit-transition: all 0.1s ease-in-out;
+		-moz-transition: all 0.1s ease-in-out;
+		-ms-transition: all 0.1s ease-in-out;
+		-o-transition: all 0.1s ease-in-out;
+		transition: all 0.1s ease-in-out;
+		color: #FFF !important;
 		text-shadow: 0.5px 0.5px #242E3A;
 		background-color: #0698CB;
 	}
-
+	#header.flat-menu nav ul.nav-main li > a:hover {
+		-webkit-transition: all 0.1s ease-in-out;
+		-moz-transition: all 0.1s ease-in-out;
+		-ms-transition: all 0.1s ease-in-out;
+		-o-transition: all 0.1s ease-in-out;
+		transition: all 0.1s ease-in-out;
+		color: #0698CB;
+	}
 	#header nav.mega-menu ul.nav-main li.mega-menu-item ul.dropdown-menu {
 		border-top-color: #0698CB;
 	}
