--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -24,19 +24,38 @@ body {
 	margin: 0;
 }
 
+/** Custom scrollbar **/
 ::-webkit-scrollbar {
     width: 12px;
 }
  
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius: 2px;
 	background-color: #0698CB;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+/** Logo classes **/
+body.sticky-menu-deactive #top-logo{
+	top:3px;
+	position: absolute;
+	z-index:12;
+	font-size:72px;
+}
+
+body.sticky-menu-active #top-logo{
+	top:4px;
+	position: fixed;
+	z-index:12;
+	font-size:60px;
+}
+
+#top-logo:hover{
+	color:#0698CB;
 }
 
 .signup-menu{
@@ -247,6 +266,7 @@ body {
 	text-transform: uppercase;
 	font-weight: 700;
 	padding: 10px 13px;
+	
 }
 
 #header nav ul.nav-main li a:hover {
@@ -430,28 +450,7 @@ body {
 	margin-top: -5px;
 }
 
-/* Logo */
-#header .logo {
-	-webkit-transition: all 0.2s ease-in 0.2s;
-	-moz-transition: all 0.2s ease-in 0.2s;
-	transition: all 0.2s ease-in 0.2s;
-	margin: 0;
-	padding: 5px 0;
-	display: table-cell;
-	vertical-align: middle;
-	height: 100%;
-	color: transparent;
-}
 
-#header .logo a {
-	position: relative;
-	z-index: 1;
-}
-
-#header .logo img {
-	position: relative;
-	color: transparent;
-}
 
 /* Header Container */
 .header-container {
@@ -474,12 +473,12 @@ body {
 }
 
 body.sticky-menu-active #header {
-	border-bottom: 1px solid #E9E9E9;
+	border-bottom: 2px solid #E9E9E9;
 	position: fixed;
 	top: -57px;
 	width: 100%;
 	z-index: 1001;
-	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 	filter: none;
 }
 
@@ -622,6 +621,9 @@ body.scrolling .nav-main-collapse.collapsing {
 
 	#header.flat-menu nav.mega-menu ul.nav-main li.mega-menu-fullwidth ul.dropdown-menu {
 		border-radius: 0;
+	}
+	#headerAccount a:hover {
+		color:#fff !important;
 	}
 }
 /* Header Flat Menu */
@@ -1500,6 +1502,7 @@ body #header nav.mega-menu .mega-menu-signin ul.dropdown-menu:hover li:hover li:
 		margin: 7px 0 0 -15px;
 		min-height: 5px;
 	}
+	
 }
 
 @media (max-width: 767px) {
