--- a/public/control/css/bootstrap.css
+++ b/public/control/css/bootstrap.css
@@ -2740,7 +2740,14 @@ select[multiple].input-lg {
           user-select: none;
   background-image: none;
   border: 1px solid transparent;
-  border-radius: 4px;
+  box-shadow: 0 4px 0 rgba(0,0,0,0.1) inset;
+  transition: all 300ms ease;
+  -moz-transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+  -ms-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
 .btn:focus,
 .btn:active:focus,
