--- a/public/control/css/bootstrap.css
+++ b/public/control/css/bootstrap.css
@@ -5969,7 +5969,7 @@ button.close {
   margin-left: auto;
 }
 .pull-right {
-  float: right !important;
+  right:20px;
 }
 .pull-left {
   float: left !important;
