--- a/public/control/css/chosen.css
+++ b/public/control/css/chosen.css
@@ -9,6 +9,8 @@
   font-size: 14px;
   position: relative;
   vertical-align: middle;
+  margin-left:14px;
+  margin-bottom:20px;
 }
 .chosen-container .chosen-drop {
   background: #ffffff;
@@ -124,7 +126,7 @@
 }
 .chosen-container-single .chosen-single span {
   display: block;
-  margin-right: 26px;
+  margin-left: 2px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
