--- a/public/control/css/app.v1.css
+++ b/public/control/css/app.v1.css
@@ -12,7 +12,11 @@ body{
 body, html{
 	overflow-x:hidden;
 	height:100%;}
-
+@media screen and (max-width: 660px) {
+   body, html{
+		overflow-x:scroll;
+    }
+}
 strong, b{
 	font-weight:700;}
 	
@@ -95,108 +99,81 @@ Loader
 *****************************/
 
 .loading-container {
-  position:fixed;
-  background-color:#f9f9f9;
-  z-index:9;
-  top: 0;
-  left: 0;
-  height:100%;
-  width:100%;
+	position:fixed;
+	background-color:#00A2D3;
+	z-index:9;
+	height:100%;
+	width:100%;
+	display: flex;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
 }
 
-.loading {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom:0;
-  right:0;
-  margin:auto;
-  transform: rotate(45deg);  
+.sk-cube-grid {
+	display:block;	
+	width: 100px;
+	height: 100px;
 }
 
-.loading div {
-  width: 16px;
-  height: 16px;
-  position: absolute;
+.sk-cube-grid .sk-cube {
+	width: 33%;
+	height: 33%;
+	background-color: #f9f9f9;
+	float: left;
+	-webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+		animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); 
+  }
 }
 
-.l1 div, .l2 div, .l3 div, .l4 div {
-  width: 100%;
-  height: 100%;
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  } 
 }
-
-.l1 div{ background-color:#222;}
-.l2 div{ background-color:#00A2D3;}
-.l3 div{ background-color:#00A2D3;}
-.l4 div{ background-color:#222;}
-
-.l1 { transform: translate(0,0); }
-.l2 { transform: translate(0,16px); }
-.l3 { transform: translate(16px,0px); }
-.l4 { transform: translate(16px,16px); }
-
-@keyframes rot1 {
-  0%{ transform: rotate(0deg); }
-  40%{ transform: rotate(0deg); }
-  50%{ transform: rotate(0deg); }
-  60%{ transform: rotate(90deg); }
-  100%{ transform: rotate(90deg); }
-}
-
-@keyframes rot2 {
-  0%{ transform: rotate(0deg); }
-  40%{ transform: rotate(0deg); }
-  50%{ transform: rotate(0deg); }
-  60%{ transform: rotate(-90deg); }
-  100%{ transform: rotate(-90deg); }
-}
-
-@keyframes rot3 {
-  0%{ transform: rotate(45deg); }
-  35%{ transform: rotate(45deg); }
-  65%{ transform: rotate(405deg); }
-  100%{ transform: rotate(405deg); }
-}
-
-@keyframes l1-rise {
-  0%{ transform: translate(0px,0px); }
-  30%{ transform: translate(-4px, -4px); }
-  70%{ transform: translate(-4px, -4px); }
-  100%{ transform: translate(0px, 0px); }
-}
-
-@keyframes l2-rise {
-  0%{ transform: translate(0,16px); }
-  30%{ transform: translate(-4px, 20px); }
-  70%{ transform: translate(-4px, 20px); }
-  100%{ transform: translate(0,16px); }
-}
-
-@keyframes l3-rise {
-  0%{ transform: translate(16px, 0px); }
-  30%{ transform: translate(20px, -4px); }
-  70%{ transform: translate(20px, -4px); }
-  100%{ transform: translate(16px, 0px); }
-}
-
-@keyframes l4-rise {
-  0%{ transform: translate(16px,16px); }
-  30%{ transform: translate(20px, 20px); }
-  70%{ transform: translate(20px, 20px); }
-  100%{ transform: translate(16px,16px); }
-}
-
-
-
-.l1 { animation: l1-rise 3s ease 0s infinite; }
-.l2 { animation: l2-rise 3s ease 0s infinite; }
-.l3 { animation: l3-rise 3s ease 0s infinite; }
-.l4 { animation: l4-rise 3s ease 0s infinite; }
-
-.l1 div, .l4 div { animation: rot1 3s ease 0s infinite; }
-.l2 div, .l3 div { animation: rot2 3s ease 0s infinite; }
 
 /*****************************
 Left Panel (aside navigation)
